# ISOBMFF_Reader

./: CMakeLists.txt  Readme.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake-multi-platform.yml
src/: Base64Decoder.hpp  BoundedStream.hpp  IMp4Output.hpp  IXmlParser.hpp  Mp4Box.hpp  Mp4Output_Console.hpp  Mp4Reader.cpp  Mp4Reader.hpp  XmlParser_ImageExtract.hpp  main.cpp
tests/: main.cpp  test_Mp4Reader.cpp  test_Mp4ReaderWithXML.cpp
